samples/_failures_safe/1761217010_ed3d7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_193aeaff.c: In function ‘main’:
./samples/SAFE/__tmp_193aeaff.c:179:5: error: expected expression at end of input
  179 |     for (k = 0; k < token_count;
      |     ^~~
./samples/SAFE/__tmp_193aeaff.c:179:5: error: expected declaration or statement at end of input
